--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -56,6 +56,7 @@ HEADER
   width: 100%;
   z-index: 9999;
   box-shadow: 0px 1px 5px #333333;
+  background-color: #fff;
 }
 
 .he_toggled {
@@ -118,7 +119,7 @@ MAIN SCREEN
 
 .main_screen_container {
     display: block;
-    top: 63px;
+    // top: 63px;
     position: relative;
 }
 
