--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -117,9 +117,17 @@ MAIN SCREEN
 ======================================*/
 
 .main_screen_container {
-    display: block;
     top: 63px;
     position: relative;
+    @include transparent();
+    @include transition(opacity 2s ease-in-out);
+    z-index: -100;
+}
+
+.main_screen_container.show {
+    @include opaque();
+    z-index: 999;
+    background-color: rgba($blue, .5);
 }
 
 /*======================================
