--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1878,6 +1878,11 @@ select {
 HEADER
 ======================================*/
 /* line 53, ../scss/app.scss */
+#choose_your_story {
+  z-index: 9999;
+}
+
+/* line 57, ../scss/app.scss */
 .header {
   display: block;
   position: fixed;
@@ -1887,7 +1892,7 @@ HEADER
   background-color: #fff;
 }
 
-/* line 64, ../scss/app.scss */
+/* line 68, ../scss/app.scss */
 .he_toggled .she_said_header {
   opacity: .5;
   -moz-transition: all 0.5s ease-in-out;
@@ -1895,7 +1900,7 @@ HEADER
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
-/* line 69, ../scss/app.scss */
+/* line 73, ../scss/app.scss */
 .he_toggled .main_screen_container {
   background-color: rgba(68, 135, 199, 0.5);
   -moz-transition: all 0.5s ease-in-out;
@@ -1904,7 +1909,7 @@ HEADER
   transition: all 0.5s ease-in-out;
 }
 
-/* line 78, ../scss/app.scss */
+/* line 82, ../scss/app.scss */
 .she_toggled .he_said_header {
   opacity: .5;
   -moz-transition: all 0.5s ease-in-out;
@@ -1912,7 +1917,7 @@ HEADER
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
-/* line 83, ../scss/app.scss */
+/* line 87, ../scss/app.scss */
 .she_toggled .main_screen_container {
   background-color: rgba(235, 93, 75, 0.5);
   -moz-transition: all 0.5s ease-in-out;
@@ -1921,7 +1926,7 @@ HEADER
   transition: all 0.5s ease-in-out;
 }
 
-/* line 90, ../scss/app.scss */
+/* line 94, ../scss/app.scss */
 .header h1 {
   color: #ffffff;
   text-transform: uppercase;
@@ -1929,21 +1934,21 @@ HEADER
   font-size: 30px;
 }
 
-/* line 97, ../scss/app.scss */
+/* line 101, ../scss/app.scss */
 .he_said_header {
   text-align: right;
   background: #4487c7;
   cursor: pointer;
 }
 
-/* line 103, ../scss/app.scss */
+/* line 107, ../scss/app.scss */
 .she_said_header {
   text-align: left;
   background: #eb5d4b;
   cursor: pointer;
 }
 
-/* line 109, ../scss/app.scss */
+/* line 113, ../scss/app.scss */
 .he_said_header, .she_said_header {
   display: block;
   width: 50%;
@@ -1954,13 +1959,10 @@ HEADER
 /*======================================
 MAIN SCREEN
 ======================================*/
-/* line 120, ../scss/app.scss */
+/* line 124, ../scss/app.scss */
 .main_screen_container {
-<<<<<<< HEAD
-  top: 63px;
-=======
   display: block;
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+  box-sizing: border-box;
   position: relative;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -1971,7 +1973,7 @@ MAIN SCREEN
   z-index: -100;
 }
 
-/* line 127, ../scss/app.scss */
+/* line 133, ../scss/app.scss */
 .main_screen_container.show {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
@@ -1983,11 +1985,7 @@ MAIN SCREEN
 COMPONENTS
 ======================================*/
 /*=== Buttons ===*/
-<<<<<<< HEAD
-/* line 139, ../scss/app.scss */
-=======
-/* line 132, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 145, ../scss/app.scss */
 a.primary_button {
   display: inline-block;
   background-color: #000;
@@ -1997,11 +1995,7 @@ a.primary_button {
   text-transform: uppercase;
 }
 
-<<<<<<< HEAD
-/* line 148, ../scss/app.scss */
-=======
-/* line 141, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 154, ../scss/app.scss */
 .hide {
   display: none;
 }
@@ -2009,11 +2003,7 @@ a.primary_button {
 /*======================================
 HEADER
 ======================================*/
-<<<<<<< HEAD
-/* line 156, ../scss/app.scss */
-=======
-/* line 149, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 162, ../scss/app.scss */
 .header_container {
   display: block;
   position: fixed;
@@ -2029,20 +2019,12 @@ HEADER
   -webkit-transition: opacity 1s ease-in-out;
   transition: opacity 1s ease-in-out;
 }
-<<<<<<< HEAD
-/* line 167, ../scss/app.scss */
-=======
-/* line 160, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 173, ../scss/app.scss */
 .header_container.fadeOut {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
 }
-<<<<<<< HEAD
-/* line 171, ../scss/app.scss */
-=======
-/* line 164, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 177, ../scss/app.scss */
 .header_container h1 {
   color: #f5f6f7;
 }
@@ -2050,11 +2032,7 @@ HEADER
 /*======================================
 CHOOSE YOUR ACT
 ======================================*/
-<<<<<<< HEAD
-/* line 180, ../scss/app.scss */
-=======
-/* line 173, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 186, ../scss/app.scss */
 video#cya_bgvid {
   position: fixed;
   top: 50%;
@@ -2070,11 +2048,7 @@ video#cya_bgvid {
   background-size: cover;
 }
 
-<<<<<<< HEAD
-/* line 195, ../scss/app.scss */
-=======
-/* line 188, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 201, ../scss/app.scss */
 .intro_container {
   display: block;
   position: absolute;
@@ -2084,30 +2058,18 @@ video#cya_bgvid {
   padding: 0px 200px;
   z-index: 99;
 }
-<<<<<<< HEAD
-/* line 204, ../scss/app.scss */
-=======
-/* line 197, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 210, ../scss/app.scss */
 .intro_container h1 {
   color: #f5f6f7;
 }
-<<<<<<< HEAD
-/* line 208, ../scss/app.scss */
-=======
-/* line 201, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 214, ../scss/app.scss */
 .intro_container p {
   font-size: 30px;
   line-height: 38px;
   color: #f5f6f7;
 }
 
-<<<<<<< HEAD
-/* line 215, ../scss/app.scss */
-=======
-/* line 208, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 221, ../scss/app.scss */
 .intros {
   position: fixed;
   top: 0;
@@ -2115,22 +2077,14 @@ video#cya_bgvid {
   display: block;
   height: 100%;
 }
-<<<<<<< HEAD
-/* line 222, ../scss/app.scss */
-=======
-/* line 215, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 228, ../scss/app.scss */
 .intros .intro_left {
   width: 50%;
   left: 0;
   height: 100%;
   position: absolute;
 }
-<<<<<<< HEAD
-/* line 228, ../scss/app.scss */
-=======
-/* line 221, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 234, ../scss/app.scss */
 .intros .intro_left:before {
   content: "";
   position: absolute;
@@ -2141,22 +2095,14 @@ video#cya_bgvid {
   height: 100%;
   display: block;
 }
-<<<<<<< HEAD
-/* line 233, ../scss/app.scss */
-=======
-/* line 226, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 239, ../scss/app.scss */
 .intros .intro_right {
   width: 50%;
   right: 0;
   height: 100%;
   position: absolute;
 }
-<<<<<<< HEAD
-/* line 239, ../scss/app.scss */
-=======
-/* line 232, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 245, ../scss/app.scss */
 .intros .intro_right:before {
   content: "";
   position: absolute;
@@ -2171,11 +2117,7 @@ video#cya_bgvid {
 /*======================================
 INTRO VIDEO
 ======================================*/
-<<<<<<< HEAD
-/* line 249, ../scss/app.scss */
-=======
-/* line 242, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 255, ../scss/app.scss */
 .fullscreen-bg {
   position: fixed;
   top: 0;
@@ -2190,20 +2132,12 @@ INTRO VIDEO
   transition: all 1s ease-in-out;
 }
 
-<<<<<<< HEAD
-/* line 260, ../scss/app.scss */
-=======
-/* line 253, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 266, ../scss/app.scss */
 .fullscreen-bg.move_down_vid {
   bottom: -100%;
 }
 
-<<<<<<< HEAD
-/* line 264, ../scss/app.scss */
-=======
-/* line 257, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 270, ../scss/app.scss */
 #bgvid {
   position: absolute;
   top: 0;
@@ -2215,11 +2149,7 @@ INTRO VIDEO
 /*======================================
 CHOOSE YOUR STORY
 ======================================*/
-<<<<<<< HEAD
-/* line 276, ../scss/app.scss */
-=======
-/* line 269, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 282, ../scss/app.scss */
 div#choose_your_story {
   position: absolute;
   display: block;
@@ -2232,20 +2162,12 @@ div#choose_your_story {
   transition: all 1s ease-in-out;
 }
 
-<<<<<<< HEAD
-/* line 285, ../scss/app.scss */
-=======
-/* line 278, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 291, ../scss/app.scss */
 div#choose_your_story.move_down {
   transform: translateY(0%);
 }
 
-<<<<<<< HEAD
-/* line 289, ../scss/app.scss */
-=======
-/* line 282, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 295, ../scss/app.scss */
 .cys_split_container {
   position: relative;
   overflow-x: hidden;
@@ -2253,11 +2175,7 @@ div#choose_your_story.move_down {
   width: 100%;
 }
 
-<<<<<<< HEAD
-/* line 296, ../scss/app.scss */
-=======
-/* line 289, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 302, ../scss/app.scss */
 .cys_side {
   height: 100%;
   position: fixed;
@@ -2269,11 +2187,7 @@ div#choose_your_story.move_down {
   -webkit-transition: height 1s ease-in-out;
   transition: height 1s ease-in-out;
 }
-<<<<<<< HEAD
-/* line 304, ../scss/app.scss */
-=======
-/* line 297, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 310, ../scss/app.scss */
 .cys_side a {
   display: block;
   position: absolute;
@@ -2283,29 +2197,17 @@ div#choose_your_story.move_down {
   height: 100%;
   z-index: 9999;
 }
-<<<<<<< HEAD
-/* line 314, ../scss/app.scss */
+/* line 320, ../scss/app.scss */
 .cys_side.header_transform {
   height: 10%;
 }
-/* line 318, ../scss/app.scss */
-=======
-/* line 307, ../scss/app.scss */
-.cys_side.header_transform {
-  height: 10%;
-}
-/* line 311, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 324, ../scss/app.scss */
 .cys_side.cys_he_container {
   width: 50%;
   left: 0;
   background-image: url("../img/he_intro.jpg");
 }
-<<<<<<< HEAD
-/* line 323, ../scss/app.scss */
-=======
-/* line 316, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 329, ../scss/app.scss */
 .cys_side.cys_he_container:before {
   content: "";
   position: absolute;
@@ -2321,21 +2223,13 @@ div#choose_your_story.move_down {
   transition: all 0.5s ease-in-out;
   z-index: 99;
 }
-<<<<<<< HEAD
-/* line 330, ../scss/app.scss */
-=======
-/* line 323, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 336, ../scss/app.scss */
 .cys_side.cys_she_container {
   width: 50%;
   right: 0;
   background-image: url("../img/she_intro.jpg");
 }
-<<<<<<< HEAD
-/* line 335, ../scss/app.scss */
-=======
-/* line 328, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 341, ../scss/app.scss */
 .cys_side.cys_she_container:before {
   content: "";
   position: absolute;
@@ -2352,22 +2246,14 @@ div#choose_your_story.move_down {
   z-index: 99;
 }
 
-<<<<<<< HEAD
-/* line 345, ../scss/app.scss */
-=======
-/* line 338, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 351, ../scss/app.scss */
 .cys_he_container img, .cys_she_container img {
   display: block;
   width: 100%;
   height: 100%;
 }
 
-<<<<<<< HEAD
-/* line 353, ../scss/app.scss */
-=======
-/* line 346, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 359, ../scss/app.scss */
 .cys_text_overlay {
   position: absolute;
   top: 40%;
@@ -2381,11 +2267,7 @@ div#choose_your_story.move_down {
   -webkit-transition: top 1s ease-in-out;
   transition: top 1s ease-in-out;
 }
-<<<<<<< HEAD
-/* line 363, ../scss/app.scss */
-=======
-/* line 355, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 369, ../scss/app.scss */
 .cys_text_overlay p {
   position: relative;
   top: 20px;
@@ -2397,16 +2279,12 @@ div#choose_your_story.move_down {
   transition: all 0.5s ease-in-out;
 }
 
-<<<<<<< HEAD
-/* line 371, ../scss/app.scss */
+/* line 377, ../scss/app.scss */
 .header_transform .cys_text_overlay {
   top: 0%;
 }
 
-/* line 376, ../scss/app.scss */
-=======
-/* line 364, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 382, ../scss/app.scss */
 .cys_he_container:hover:before {
   content: "";
   position: absolute;
@@ -2417,22 +2295,14 @@ div#choose_your_story.move_down {
   height: 100%;
   display: block;
 }
-<<<<<<< HEAD
-/* line 380, ../scss/app.scss */
-=======
-/* line 368, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 386, ../scss/app.scss */
 .cys_he_container:hover .cys_text_overlay p {
   top: 0px;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-<<<<<<< HEAD
-/* line 387, ../scss/app.scss */
-=======
-/* line 375, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 393, ../scss/app.scss */
 .cys_she_container:hover:before {
   content: "";
   position: absolute;
@@ -2443,18 +2313,14 @@ div#choose_your_story.move_down {
   height: 100%;
   display: block;
 }
-<<<<<<< HEAD
-/* line 390, ../scss/app.scss */
-=======
-/* line 378, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 396, ../scss/app.scss */
 .cys_she_container:hover .cys_text_overlay p {
   top: 0px;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-/* line 396, ../scss/app.scss */
+/* line 402, ../scss/app.scss */
 .cys_side.header_transform.cys_she_container:before {
   content: "";
   position: absolute;
@@ -2467,19 +2333,11 @@ div#choose_your_story.move_down {
 }
 
 /*=== Flexslider ===*/
-<<<<<<< HEAD
-/* line 404, ../scss/app.scss */
+/* line 410, ../scss/app.scss */
 .cys_split_container .flexslider {
   height: 100%;
 }
-/* line 408, ../scss/app.scss */
-=======
-/* line 388, ../scss/app.scss */
-.cys_split_container .flexslider {
-  height: 100%;
-}
-/* line 392, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 414, ../scss/app.scss */
 .cys_split_container ul.slides {
   margin: 0px;
   left: 0;
@@ -2489,11 +2347,7 @@ div#choose_your_story.move_down {
   height: 100%;
   width: 100%;
 }
-<<<<<<< HEAD
-/* line 417, ../scss/app.scss */
-=======
-/* line 401, ../scss/app.scss */
->>>>>>> 89661639f5a3ec47a371f3bdfc57a77c4dfba4bd
+/* line 423, ../scss/app.scss */
 .cys_split_container ul.slides li {
   background-size: cover !important;
   height: 100%;
